chore: update to Java 21